--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,17 @@
+# Datasource
+spring.datasource.platform=postgresql
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/transacoes}
+spring.datasource.username=tiagoalcantara
+spring.datasource.password=12345
+
+# JPA
+## update não deve ser usado em produção
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.javax.persistence.query.timeout = 50
+
 # Kafka
 spring.kafka.bootstrap-servers=${KAFKA_HOST:localhost:9092}
 ## Formato da chave (String) recebida!
